# tinyshift

./: .gitignore  README.md  eda.ipynb  example.ipynb  examples.ipynb  pyproject.toml
.github/: pull_request_template.md
src/: base.py  detector.py  performance_estimator.py  plot.py  plotting.py  scoring.py  stats.py  threshold.py  tracker.py  utils.py
src/base/: model.py
src/detectors/: categorical.py  continuous.py
src/tracker/: performance.py
tinyshift/drift/: README.md  categorical.py  continuous.py
tinyshift/examples/: decomp_mstl_ml.ipynb  drift.ipynb  hampel.ipynb  hurst.ipynb  outlier.ipynb  pca.ipynb  series.ipynb  tracker.ipynb  transaction_analyzer.ipynb  ts_diagnostics.ipynb  usage.ipynb
tinyshift/modelling/: README.md
tinyshift/modelling/association_rule/: analyzer.py
tinyshift/outlier/: README.md  base.py  hbos.py  spad.py
tinyshift/plot/: README.md  __init__.py  calibration.py  diagnostic.py  plot.py  ts_diagnostics.py
tinyshift/series/: README.md  __init__.py  forecastability.py  interpolation.py  outlier.py  sampen.py  stats.py
tinyshift/stats/: __init__.py  scaler.py  statistical_interval.py  utils.py
tinyshift/tests/: test_hbos.py
tinyshift/tracker/: __init__.py  anomaly.py  base.py  categorical.py  continuous.py  performance.py
tinyshift/utils/: __init__.py  utils.py
